<resources>
    <string name="app_name">My Loans</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="empty_field">empty field</string>
    <string name="invalid_value">Invalid value</string>
    <string name="wrong_log_or_pas">wrong login or password</string>
    <string name="unknown_error">Unknown error</string>
    <string name="not_found_error">Page not found</string>
    <string name="authorisation_error">Authorisation error</string>
    <string name="authorisation_error_message">You are not authorized, please login again</string>
    <string name="connection_error">Connection error, please check your internet connection</string>
    <string name="user_exists">User with the same name already exists</string>
    <string name="how_to_use">How to use?</string>
    <string name="get_a_loan">Take out a loan</string>
    <string name="loan_history">loan history</string>
    <string name="you_don_t_have_loans">you don\'t have loans:)</string>
    <string name="amount">Amount</string>
    <string name="status">status</string>
    <string name="percent">Percent</string>
    <string name="period">Period</string>
    <string name="date">Date</string>
    <string name="surname">Surname</string>
    <string name="phone_number">Phone number</string>
    <string name="loan_conditions">Read the terms of the loan</string>
    <string name="maximum_amount">Maximum Amount</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="guid_fill">Familiarize yourself with the terms and fill in the necessary information</string>
    <string name="guid_start">Click on \'Apply for a loan\' on the main screen</string>
    <string name="guid_confirm">Confirm your information and complete the loan application</string>
    <string name="guid_finish">The loan application has been successfully submitted</string>
    <string name="confirm">confirm</string>
    <string name="loan_submitted">Loan application has been successfully submitted. Please wait for it to be reviewed. You can check the current status of your application on the loan history screen.</string>
    <string name="main_screen">main screen</string>
    <string name="approved">APPROVED</string>
    <string name="registered">REGISTERED</string>
    <string name="rejected">REJECTED</string>
    <string name="borrower">borrower</string>
    <string name="name_and_lastname">%s\n%s</string>
    <string name="amount_format">%s rub</string>
    <string name="period_format">%s months</string>
    <string name="try_again">try again</string>
    <string name="proceed_to_loan_application">Proceed to loan application</string>
    <string name="novosibirsk">Novosibirsk</string>
    <string name="sberbank">Sberbank</string>
    <string name="congratulations">Congratulations, your loan has been approved.</string>
    <string name="transfer_to_card">You can request a transfer to your card by contacting the operator at:</string>
    <string name="take_in_bank">Alternatively, you can receive the money in cash at the bank branch.</string>
    <string name="find_nearest_branch">find nearest branch</string>
    <string name="call_center_phone" translatable="false">+79876543210</string>
    <string name="refresh">refresh</string>
</resources>